--- a/src/app/pages/your-reviews/your-reviews.html
+++ b/src/app/pages/your-reviews/your-reviews.html
@@ -1,7 +1,7 @@
 <div class="reviews-container">
   <h2>Your Reviews</h2>
 
-  <div *ngIf="reviews.length === 0" class="no-reviews">
+  <div *ngIf="reviews.length === 0" class="no-reviews text-lg">
     No reviews found.
   </div>
 
