--- a/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.html
+++ b/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.html
@@ -143,7 +143,7 @@
       type="button"
       class="check-btn"
       (click)="onShowConfirmModal()"
-      [disabled]="!selected?.startDate || !selected?.endDate"
+      [disabled]="!selected.startDate || !selected.endDate"
     >
       Reserve
     </button>
