--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -1,7 +1,7 @@
 .airbnb-header {
   background: linear-gradient(to bottom, var(--bg-color), var(--head));
   border-bottom: 1px solid var(--border-color);
-  box-shadow:inset 0 1px 3px var(--shadow-color);
+  box-shadow: inset 0 1px 3px var(--shadow-color);
   position: fixed;
   top: 0;
   left: 0;
@@ -46,7 +46,6 @@
   display: flex;
   align-items: center;
   gap: 8px;
-
 }
 
 .user-menu-button:hover {
@@ -84,15 +83,14 @@
   max-width: calc(100vw - 16px);
   /* overflow: hidden; */
   background-color: var(--active);
-  min-height: 240px !important;
+  min-height: 100px !important;
 }
 
-
-.menu-dropdown{
- background-color: var(--active);
- width: 100%;
+.menu-dropdown {
+  background-color: var(--active);
+  width: 100%;
 }
-.menu-dropdown:hover{
+.menu-dropdown:hover {
   background-color: transparent !important;
 }
 
@@ -129,6 +127,7 @@
 .span-bg-n {
   background-color: var(--airbnb-red);
   color: white;
+  font-size: 0.7rem;
 }
 
 @media (max-width: 991.98px) {
@@ -179,10 +178,6 @@
   stroke: currentColor;
 }
 
-
-
-
-
 .airbnb-header.search-bar-sticky .search-bar-container {
   margin-top: -55px;
   transform: scale(0.9);
@@ -203,7 +198,8 @@
   z-index: auto;
 }
 
-.top-nav-categories,.top-nav-wrapper  {
+.top-nav-categories,
+.top-nav-wrapper {
   transition: all 0.5s ease;
 }
 
@@ -217,7 +213,6 @@
   margin-top: -11rem;
   pointer-events: none;
 }
-
 
 .relative-header {
   position: relative !important;
