--- a/src/app/components/menu-header/menu-header.html
+++ b/src/app/components/menu-header/menu-header.html
@@ -139,7 +139,7 @@
           Become a Host
         </a>
       </li> -->
-      <li>
+      <li *ngIf="isLoggedIn">
         <a
           class="dropdown-item d-flex align-items-center gap-2"
           routerLink="/WishLists"
@@ -169,7 +169,7 @@
           {{ "HEADER.WISHLISTS" | translate }}
         </a>
       </li>
-      <li>
+      <li *ngIf="isLoggedIn">
         <a
           class="dropdown-item d-flex align-items-center gap-2"
           href="Messages"
@@ -180,9 +180,9 @@
               *ngIf="unreadCount > 0"
               class="position-absolute badge rounded-pill span-bg-n"
               [ngStyle]="{
-                top: '-12px',
-                left: lang.currentLang === 'en' ? '-12px' : null,
-                right: lang.currentLang === 'ar' ? '-12px' : null
+                top: '-7px',
+                left: lang.currentLang === 'en' ? '-7px' : null,
+                right: lang.currentLang === 'ar' ? '-7px' : null
               }"
             >
               {{ unreadCount }}
@@ -193,7 +193,7 @@
         </a>
       </li>
 
-      <li [ngStyle]="!isLoggedIn ? { margin: '1.5rem 0rem' } : {}">
+      <li *ngIf="isLoggedIn" [ngStyle]="isLoggedIn ? { margin: '1.1rem 0rem' } : {}">
         <hr class="dropdown-divider" />
       </li>
 
