--- a/src/app/pages/PropertyDetails/contact-host/contact-host.component.css
+++ b/src/app/pages/PropertyDetails/contact-host/contact-host.component.css
@@ -197,7 +197,7 @@
             max-width: 375px;
         }
 
-        /* app-reverse-section styling wrapper */ */
+        /* app-reverse-section styling wrapper */ 
          app-reverse-section {
             display: block;
             width: 100%;
