--- a/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.css
+++ b/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.css
@@ -440,7 +440,8 @@
 .leftsection ::ng-deep .md-drppicker {
   background-color: rgb(255, 255, 255) !important;
   border-width: 1px;
-  left: -100% !important;
+  left: -80% !important;
+  bottom: -15% !important;
   position: absolute;
   z-index: 10000000 !important;
 }
