Toggle Icon && HostMessageLink

--- a/src/app/components/guest-reviews/guest-reviews.html
+++ b/src/app/components/guest-reviews/guest-reviews.html
@@ -409,6 +409,7 @@
               onmouseout="this.style.backgroundColor='#ebebeb'; this.style.borderColor='#ebebeb'"
               onmousedown="this.style.transform='scale(0.95)'"
               onmouseup="this.style.transform='scale(1)'"
+              [routerLink] = "['/contact-host',propertyId]"
             >
               Message host
             </button>
