--- a/src/app/pages/PropertyDetails/contact-host/contact-host.component.css
+++ b/src/app/pages/PropertyDetails/contact-host/contact-host.component.css
@@ -191,10 +191,10 @@
         }
 
         .sticky-box {
-            position: sticky !important;
-            top: 90px !important;
-            width: 375px;
-            max-width: 375px;
+            /* position: sticky !important; */
+            /* top: 90px !important; */
+            /* width: 375px; */
+            /* max-width: 375px; */
         }
 
         /* app-reverse-section styling wrapper */ 
