--- a/src/app/pages/PropertyDetails/contact-host/contact-host.component.html
+++ b/src/app/pages/PropertyDetails/contact-host/contact-host.component.html
@@ -93,7 +93,7 @@
             </div>
 
             <!-- Right Column - Your Angular Component -->
-            <div *ngIf="showReservationBox" class="col-md-3 sticky-box" style="position: sticky; top: 90px;">
+            <div *ngIf="showReservationBox" class="col-md-4" style="position: sticky; top: 90px;">
 
                 <app-reverse-section
                     [dateMap]="dateMap"
