--- a/src/app/pages/add-property/step-1/step1-3-what-type/step1-3-what-type.css
+++ b/src/app/pages/add-property/step-1/step1-3-what-type/step1-3-what-type.css
@@ -60,7 +60,7 @@
 }
 
 .selection-button[aria-checked="true"] {
-  background-color: var(--selected-bg);
+  background-color: var(--bg-color);
   border: 2px solid var(--primary-text-color);
   padding: 23px;
 }
@@ -95,7 +95,7 @@
   width: 100%;
   height: 100%;
   display: block;
-  fill: var(--primary-text-color);
+  fill: var(--bg-color);
 }
 
 @keyframes slideInUp {
