--- a/src/app/pages/add-property/step-3/step3-2-pick-booking/step3-2-pick-booking.css
+++ b/src/app/pages/add-property/step-3/step3-2-pick-booking/step3-2-pick-booking.css
@@ -73,7 +73,7 @@ html {
 }
 
 .option-card.selected {
-  background-color: var(--selected-bg);
+  background-color: var(--bg-color);
   border: 2px solid var(--primary-text-color);
   padding: 23px;
 }
