--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,12 @@
-<app-login></app-login>
-<app-register></app-register>
-<app-confirm></app-confirm>
-<app-reset-password></app-reset-password>
-<router-outlet></router-outlet>
-
+@if (!showOverlay) 
+{
+    <app-login></app-login>
+    <app-register></app-register>
+    <app-confirm></app-confirm>
+    <app-reset-password></app-reset-password>
+    <router-outlet></router-outlet>
+}@else {
+    <app-blocking-overlay *ngIf="showOverlay"></app-blocking-overlay>   
+}
 <!-- <app-signalr-test></app-signalr-test> -->
 
