--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -117,7 +117,7 @@
       >
       <span class="ms-1">
         <img
-          src="public/privacy.png"
+          src="../../../assets/images/leave a review.webp"
           loading="lazy"
           alt="Privacy Icon"
           style="height: 16px"
